// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should be invalid for all 1`] = `
Object {
  "code": "yup:string.nonEmpty",
  "id": Object {
    "key": "yup:string.uuid",
    "options": Object {
      "path": "id",
    },
  },
  "location": Object {
    "coordinates": Array [
      "yup:number.longitude",
      "yup:number.latitude",
    ],
    "id": Object {
      "key": "yup:string.uuid",
      "options": Object {
        "path": "location.id",
      },
    },
    "kind": Object {
      "key": "yup:mixed.oneOf",
      "options": Object {
        "values": "put-in, put-in-alt, put-in-road, take-out, take-out-alt, take-out-road, waterfall, rapid, portage, playspot, hazard, river-campsite, wild-camping, paid-camping, gauge, hike-waypoint, bridge, dam, power-plant, kayak-shop, other",
      },
    },
  },
  "name": "yup:string.nonEmpty",
  "source": Object {
    "id": Object {
      "key": "yup:string.uuid",
      "options": Object {
        "path": "source.id",
      },
    },
  },
  "url": Object {
    "key": "yup:string.url",
    "options": Object {
      "path": "url",
    },
  },
}
`;

exports[`should be invalid for extra field 1`] = `
Object {
  "": Object {
    "key": "yup:object.noUnknown",
    "options": Object {
      "path": "this",
    },
  },
}
`;

exports[`should be invalid for null source 1`] = `
Object {
  "source": Object {
    "key": "yup:mixed.notType",
    "options": Object {
      "type": "object",
    },
  },
}
`;

exports[`should be invalid for undefined code 1`] = `
Object {
  "code": "yup:string.nonEmpty",
}
`;

exports[`should be invalid for undefined name 1`] = `
Object {
  "name": "yup:string.nonEmpty",
}
`;

exports[`should be invalid for undefined source 1`] = `
Object {
  "source": "yup:mixed.defined",
}
`;
